# windows-log-gathering-agent

./: .dockerignore  .env.example  .gitignore  DOCKER.md  Dockerfile  Makefile  README.md  debug_cbs_collection.py  debug_full_collection.py  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt
frontend/: Dockerfile  Dockerfile.dev  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatInterface.tsx  ClientSelector.tsx  GlassSurface.tsx  JsonTreeViewer.tsx  LogViewer.tsx  QuickActions.tsx  Results.tsx  SplitText.tsx  SystemStatus.tsx
mcp_servers/powershell_server/: Dockerfile  requirements.txt  server.py  server_fastmcp.py
mcp_servers/smb_server/: Dockerfile  requirements.txt  server.py  server_fastmcp.py
src/loggatheringagent/: __init__.py  cli.py
src/loggatheringagent/api/: __init__.py  main.py
src/loggatheringagent/config/: machines.yaml  settings.py
src/loggatheringagent/core/: __init__.py  llm_analyzer.py  log_collector.py
src/loggatheringagent/mcp_clients/: __init__.py  direct_local_client.py  fastmcp_smb_client.py  powershell_client.py  smb_client.py
